objects/ssot__AssessmentSignature__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__AssessmentId__c</fullName>
        <label>Assessment</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DigitalSignatureId__c</fullName>
        <label>Digital Signature</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Assessment Signature Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PlaceText__c</fullName>
        <label>Place</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SignedByName__c</fullName>
        <label>Signed By Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SignedDateTime__c</fullName>
        <label>Signed Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__SignedInitialText__c</fullName>
        <label>Signed Initial</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SigneeId__c</fullName>
        <label>Signee</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SigneeObjectName__c</fullName>
        <label>Signee Object Name</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1720290980078_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AssessmentSignature_SigneeId_map_Use_rel</label>
        <referenceTo>ssot__User__dlm</referenceTo>
        <relationshipLabel>AssessmentSignature_SigneeId_map_Use_rel</relationshipLabel>
        <relationshipName>rel_1720290980078_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1720290992946_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AssessmentSignature_SigneeObjectName_rel</label>
        <referenceTo>ssot__User__dlm</referenceTo>
        <relationshipLabel>AssessmentSignature_SigneeObjectName_rel</relationshipLabel>
        <relationshipName>rel_1720290992946_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1720291286362_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AssessmentSignature_SigneeId_map_Acc_rel</label>
        <referenceTo>ssot__AccountContact__dlm</referenceTo>
        <relationshipLabel>AssessmentSignature_SigneeId_map_Acc_rel</relationshipLabel>
        <relationshipName>rel_1720291286362_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>